<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tourplanner</groupId>
  <artifactId>TourPlanner</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>TourPlanner</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <lombok.version>1.18.32</lombok.version>
    <tesfx.version>4.0.18</tesfx.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.16</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.2.1</version>
    </dependency>
    <!--    <dependency>
          <groupId>org.testfx</groupId>
          <artifactId>testfx-core</artifactId>
          <version>4.0.18</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.testfx</groupId>
          <artifactId>testfx-junit5</artifactId>
          <version>4.0.18</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>5.11.4</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>5.11.4</version>
          <scope>test</scope>
        </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>org.testfx</groupId>-->
    <!--      <artifactId>openjfx-monocle</artifactId>-->
    <!--      <version>21.0.2</version>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>org.hamcrest</groupId>-->
    <!--      <artifactId>hamcrest</artifactId>-->
    <!--      <version>3.0</version>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>${project.basedir}/src/main/resources</directory>
      </testResource>
    </testResources>
    <plugins>
      <!--      <plugin>-->
      <!--        <groupId>org.apache.maven.plugins</groupId>-->
      <!--        <artifactId>maven-surefire-plugin</artifactId>-->
      <!--        <version>3.2.5</version>-->
      <!--        <configuration>-->
      <!--          <argLine>-->
      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED-->
      <!--            &#45;&#45;add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
      <!--            &#45;&#45;add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED-->
      <!--            &#45;&#45;add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED-->
      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED-->
      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED-->
      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED-->
      <!--            &#45;&#45;add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED-->
      <!--          </argLine>-->
      <!--        </configuration>-->
      <!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
          <additionalClasspathElements>
            <additionalClasspathElement>${project.build.testOutputDirectory}</additionalClasspathElement>
          </additionalClasspathElements>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
              <mainClass>at.technikum.tourplanner/at.technikum.tourplanner.TourPlannerApplication
              </mainClass>
              <launcher>app</launcher>
              <jlinkZipName>app</jlinkZipName>
              <jlinkImageName>app</jlinkImageName>
              <noManPages>true</noManPages>
              <stripDebug>true</stripDebug>
              <noHeaderFiles>true</noHeaderFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
